# inputstream.adaptive

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  FindBento4.cmake  FindGtest.cmake  FindRAPIDJSON.cmake  Helpers.cmake  Jenkinsfile  LICENSE.md  README.md  appveyor.yml  azure-pipelines.yml
depends/common/expat/: CMakeLists.txt  expat.txt  platforms.txt
depends/common/googletest/: 0001-FixWarningMaybe-uninitialized.patch  0001-fix-UWP-death-test.patch  CMakeLists.txt  flags.txt  googletest.sha256  googletest.txt
lib/cdm/: CMakeLists.txt
lib/jni/: CMakeLists.txt
lib/libbento4/: 0006-Fix-segfault-when-AP4_Sample-s-seek.patch  0007-Hack-HBO.patch  0009-Dazn-sample-duration-workaround.patch  0011-Static-ReadGolomb-SignedGolomb.patch  CMakeLists.txt
lib/libbento4/Codecs/: Ap4AvcParser.cpp  Ap4AvcParser.h
lib/libbento4/Core/: AP4TrafAtom.cpp  Ap4.h  Ap4Atom.cpp  Ap4Atom.h  Ap4AtomFactory.cpp  Ap4ByteStream.h  Ap4CommonEncryption.cpp  Ap4CommonEncryption.h  Ap4Config.h  Ap4ContainerAtom.h  Ap4CttsAtom.cpp  Ap4Dac3Atom.cpp  Ap4Dac3Atom.h  Ap4File.cpp  Ap4File.h  Ap4FileByteStream.h  Ap4FragmentSampleTable.cpp  Ap4FragmentSampleTable.h  Ap4IsmaCryp.cpp  Ap4IsmaCryp.h  Ap4LinearReader.cpp  Ap4LinearReader.h  Ap4List.h  Ap4Marlin.cpp  Ap4Marlin.h  Ap4MoovAtom.cpp  Ap4MoovAtom.h  Ap4Movie.cpp  Ap4Movie.h  Ap4MovieFragment.cpp  Ap4MovieFragment.h  Ap4OmaDcf.cpp  Ap4OmaDcf.h  Ap4Processor.cpp  Ap4Processor.h  Ap4Protection.cpp  Ap4Protection.h  Ap4Results.h  Ap4SampleDescription.h  Ap4SampleEntry.cpp  (+15 more)
lib/mfcdm/: CMakeLists.txt
lib/mfcdm/mfcdm/: Log.cpp  Log.h  MediaFoundationCdm.cpp  MediaFoundationCdm.h  MediaFoundationCdmConfig.h  MediaFoundationCdmFactory.cpp  MediaFoundationCdmFactory.h  MediaFoundationCdmModule.h  MediaFoundationCdmSession.cpp  MediaFoundationCdmSession.h  MediaFoundationCdmTypes.h  MediaFoundationSession.cpp  MediaFoundationSession.h
lib/mpegts/: CMakeLists.txt  ES_AAC.cpp  ES_AAC.h  ES_AC3.cpp  ES_AC3.h  ES_MPEGAudio.cpp  ES_MPEGAudio.h  ES_MPEGVideo.cpp  ES_MPEGVideo.h  ES_Subtitle.cpp  ES_Subtitle.h  ES_Teletext.cpp  ES_Teletext.h  ES_h264.cpp  ES_h264.h  ES_hevc.cpp  ES_hevc.h  bitstream.cpp  bitstream.h  debug.cpp  debug.h  elementaryStream.cpp  elementaryStream.h  mutex.h  tsDemuxer.cpp  tsDemuxer.h  tsPacket.h  tsTable.h
lib/mpegts/mpegts/: ES_AAC.h  ES_AC3.cpp  ES_AC3.h  ES_MPEGAudio.cpp  ES_MPEGAudio.h  ES_Teletext.h  ES_h264.cpp  debug.h  elementaryStream.h  mutex.h  tsDemuxer.cpp  tsDemuxer.h  tsPacket.h
lib/webm_parser/: CMakeLists.txt
lib/webm_parser/demo/: demo.cc
lib/webm_parser/src/: ancestory.cc  (+69 more)
src/: ADTSReader.cpp  ADTSReader.h  AdaptiveByteStream.cpp  AdaptiveByteStream.h  CMakeLists.txt  CompKodiProps.cpp  CompKodiProps.h  CompResources.h  CompSettings.cpp  CompSettings.h  CryptoMode.h  DllHelper.h  Iaes_decrypter.h  KodiHost.cpp  KodiHost.h  SSD_dll.h  Session.cpp  Session.h  SrvBroker.cpp  SrvBroker.h  Stream.cpp  Stream.h  TSReader.cpp  TSReader.h  WebmReader.cpp  WebmReader.h  aes_decrypter.cpp  aes_decrypter.h  helpers.cpp  helpers.h  log.h  main.cpp  main.h  md5.cpp  md5.h  msl.cpp  msl.h  oscompat.cpp  oscompat.h
src/codechandler/: AV1CodecHandler.cpp  AV1CodecHandler.h  AVCCodecHandler.cpp  AVCCodecHandler.h  AudioCodecHandler.cpp  AudioCodecHandler.h  CMakeLists.txt  CodecHandler.cpp  CodecHandler.h  HEVCCodecHandler.cpp  HEVCCodecHandler.h  MPEGCodecHandler.cpp  MPEGCodecHandler.h  TTMLCodecHandler.cpp  TTMLCodecHandler.h  VP9CodecHandler.cpp  VP9CodecHandler.h  WebVTTCodecHandler.cpp  WebVTTCodecHandler.h
src/common/: AdaptationSet.cpp  AdaptationSet.h  AdaptiveCencSampleDecrypter.cpp  AdaptiveCencSampleDecrypter.h  AdaptiveDecrypter.h  AdaptiveStream.cpp  AdaptiveStream.h  AdaptiveTree.cpp  AdaptiveTree.h  AdaptiveTreeFactory.cpp  AdaptiveTreeFactory.h  AdaptiveUtils.cpp  AdaptiveUtils.h  CMakeLists.txt  Chooser.cpp  Chooser.h  ChooserAskQuality.cpp  ChooserAskQuality.h  ChooserDefault.cpp  ChooserDefault.h  ChooserFixedRes.cpp  ChooserFixedRes.h  ChooserManualOSD.cpp  ChooserManualOSD.h  ChooserTest.cpp  ChooserTest.h  CommonAttribs.cpp  CommonAttribs.h  CommonSegAttribs.cpp  CommonSegAttribs.h  Period.cpp  Period.h  ReprSelector.cpp  ReprSelector.h  Representation.cpp  Representation.h  RepresentationChooser.cpp  RepresentationChooser.h  RepresentationChooserAskQuality.cpp  RepresentationChooserAskQuality.h  (+18 more)
src/decrypters/: CMakeLists.txt  DrmFactory.cpp  DrmFactory.h  HelperPr.cpp  HelperPr.h  HelperWv.cpp  HelperWv.h  Helpers.cpp  Helpers.h  IDecrypter.h
src/demuxers/: ADTSReader.cpp  ADTSReader.h  CMakeLists.txt  TSReader.cpp  TSReader.h  WebmReader.cpp  WebmReader.h
src/parser/: CMakeLists.txt  CodecParser.cpp  CodecParser.h  DASHTree.cpp  DASHTree.h  DASHTreeTest.cpp  HLSTree.cpp  HLSTree.h  PRProtectionParser.cpp  PRProtectionParser.h  SmoothTree.cpp  SmoothTree.h  TTML.cpp  TTML.h  WebVTT.cpp  WebVTT.h
src/samplereader/: ADTSSampleReader.cpp  ADTSSampleReader.h  CMakeLists.txt  DummySampleReader.h  FragmentedSampleReader.cpp  FragmentedSampleReader.h  SampleReader.h  SampleReaderFactory.cpp  SampleReaderFactory.h  SubtitleSampleReader.cpp  SubtitleSampleReader.h  TSSampleReader.cpp  TSSampleReader.h  WebmSampleReader.cpp  WebmSampleReader.h
src/test/: CMakeLists.txt  KodiStubs.h  TestDASHTree.cpp  TestHLSTree.cpp  TestHelper.cpp  TestHelper.h  TestMain.cpp  TestSmoothTree.cpp  TestUtils.cpp
src/utils/: Base64Utils.cpp  Base64Utils.h  CMakeLists.txt  CharArrayParser.cpp  CharArrayParser.h  CryptoUtils.h  CurlUtils.cpp  CurlUtils.h  DigestMD5Utils.cpp  DigestMD5Utils.h  FFmpeg.h  FileUtils.cpp  FileUtils.h  JsonUtils.cpp  JsonUtils.h  MemUtils.cpp  MemUtils.h  PropertiesUtils.cpp  PropertiesUtils.h  SettingsUtils.cpp  SettingsUtils.h  StringUtils.cpp  StringUtils.h  UrlUtils.cpp  UrlUtils.h  Utils.cpp  Utils.h  XMLUtils.cpp  XMLUtils.h  log.h
wvdecrypter/: CMakeLists.txt  CMakeLists.txt.ndk  Helper.cpp  Helper.h  README.md  jsmn.c  wvdecrypter.cpp  wvdecrypter.h  wvdecrypter_android.cpp  wvdecrypter_android_jni.cpp  wvdecrypter_empty.cpp
wvdecrypter/jni/: CMakeLists.txt
(+333 files in other folders)
